# rust-opensmtpd

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  README.md
examples/: counter.rs  dummy.rs
examples/samples/: dual_session.txt  single_session.txt
opensmtpd/: Cargo.toml
opensmtpd-derive/: Cargo.toml
opensmtpd-derive/src/: attributes.rs  lib.rs
opensmtpd/examples/: counter.rs  dummy.rs  echo.rs  hello.rs  report_counter.rs  rm_x-originating-ip.rs  session_event_counter.rs
opensmtpd/examples/samples/: single_events_session.txt  single_session.txt
opensmtpd/src/: data_line.rs  entry.rs  error.rs  errors.rs  event_handlers.rs  filter.rs  handler.rs  input.rs  io.rs  lib.rs  logger.rs  message_aggregator.rs  output.rs  process.rs  response.rs  session_handler.rs
opensmtpd/src/data_structures/: address.rs  auth_result.rs  event.rs  filter_kind.rs  filter_phase.rs  filter_response.rs  mail_result.rs  method.rs  smtp_status.rs  subsystem.rs  timeval.rs
opensmtpd/src/input/: stdin.rs
opensmtpd/src/output/: null.rs  stdout.rs
opensmtpd/src/parsers/: entry.rs  handshake.rs  mod.rs  parameters.rs
src/: data_line.rs  entry.rs  error.rs  errors.rs  event_handlers.rs  filter.rs  io.rs  lib.rs  process.rs
src/data_structures/: filter_kind.rs  mail_result.rs  method.rs  mod.rs  smtp_status.rs  subsystem.rs  timeval.rs
src/parsers/: entry.rs  mod.rs  parameters.rs
