[package]
name = "opensmtpd"
version = "0.2.0"
authors = ["Rodolphe Bréard <rodolphe@what.tf>"]
edition = "2018"
description = "Interface for OpenSMTPD filters"
keywords = ["opensmtpd", "filter", "mail"]
documentation = "https://docs.rs/opensmtpd/"
repository = "https://github.com/breard-r/rust-opensmtpd"
readme = "README.md"
license = "MIT OR Apache-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE-*.txt"]

[dependencies]
log = {version = "0.4", features = ["std"]}
nom = "5.0"
opensmtpd_derive = { path = "../opensmtpd-derive", version = "0.2" }

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"

[[example]]
name = "counter"
path = "examples/report_counter.rs"
